Add title slide

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <div class="reveal">
 <div class="slides">
     <section data-markdown>
+        # What is a GPU?
+
+        ## A brief introduction for REG
+    </section>
+    <section data-markdown>
         <textarea data-template>
             ## Take Home Messages
 
