--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             - Transferring data is **slow**
             <aside data-markdown class="notes">
                 - These points are a simplification
+                - I may say things I know not to be quite true, or simply be wrong
                 - But this is all you need to know
                 - GPUs are a separate device with their own processors and memory
                 - GPUs have many (thousands) of cores
