Adjust caption font size

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         div.columns{display: flex; gap: min(4vw, 1.5em);}
         div.column{flex: auto; overflow-x: auto;}
     </style>
+
+    <style>
+        figure{font-size: medium;}
+    </style>
 </head>
 <body>
 <div class="reveal">
