Improve take home messages

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
             ## Take Home Messages
 
             - Separate devices with own memory
-            - Many (thousands) of cores
-            - Cores do the same operations on an input stream
-            <!-- - Each does the same thing -->
+            - Many ((tens of) thousands) of cores
+            - Same operations applied on an input stream
             - Vector operations are **very** fast
             - Reductions are quite fast
             - Transferring data is **slow**
