Expand energy efficiency

--- a/index.html
+++ b/index.html
@@ -425,11 +425,12 @@
             <textarea data-template>
                 ### Energy Efficiency
 
+                - At peak, GPUs consume more power than CPUs
                 - Typically higher FLOPS per Watt than CPU
-                - Data Centres
-                - Energy efficiency
-                - Recycling waste heat
-                - Lower impact cooling
+                - Therefore, for a given calculation GPUs use energy
+                - Data Centres increasingly focus on energy efficiency
+                    - Recycling waste heat
+                    - Lower impact cooling
             </textarea>
         </section>
         <section data-markdown>
