Correct slide title

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </section>
         <section data-markdown>
             <textarea data-template>
-                ## Higher Level Interface
+                ## Higher Level Interfaces
 
                 - You *probably* shouldn't write kernels
                 - Are you likely to write a more performant and stable algorithm?
